--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,4 @@ $primaryLighter: lighten($primary, 30%);
 $secondary: #2e3047;
 $secondaryBrighter: #34374d;
 $secondaryBrightest: #43455c;
+$secondaryLighter: #585b77;
